--- a/niby ładniejszy.html
+++ b/niby ładniejszy.html
@@ -176,7 +176,7 @@
     </form>
     <ul id="gameList"></ul>
   </div>
-<a href="../Strona Głowna/glowna.html" class="back-home">⬅ Wróć do strony głównej</a>
+<a href="/glowna.html" class="back-home">⬅ Wróć do strony głównej</a>
 
   <script>
     document.addEventListener('DOMContentLoaded', () => {
@@ -234,3 +234,4 @@
   </script>
 </body>
 </html>
+
