--- a/dltbicon.html
+++ b/dltbicon.html
@@ -163,7 +163,7 @@
     </style>
 </head>
 <body>
-<a href="index.html" class="back-home">⬅ Wróć do strony głównej</a>
+<a href="glowna.html" class="back-home">⬅ Wróć do strony głównej</a>
 
 
     <h1>Odliczanie do premiery Dying Light: The Beast</h1>
@@ -239,3 +239,4 @@
     </script>
 </body>
 </html>
+
