--- a/glowna.html
+++ b/glowna.html
@@ -63,12 +63,12 @@
 </header>
 
 <main>
-  <a class="card" href="/niby ładniejszy.html">
+  <a class="card" href="niby ładniejszy.html">
     <h2>🎮 Notatnik gier</h2>
     <p>Zapisuj ukończone gry, platformy i statusy</p>
   </a>
 
-  <a class="card" href="/dltbicon.html">
+  <a class="card" href="dltbicon.html">
     <h2>⏳ Odliczanie do Dying Light: The Beast</h2>
     <p>Strona z licznikiem do premiery lub wydarzenia</p>
   </a>
@@ -82,4 +82,5 @@
 
 </body>
 </html>
+
 
