--- a/niby ładniejszy.html
+++ b/niby ładniejszy.html
@@ -176,7 +176,7 @@
     </form>
     <ul id="gameList"></ul>
   </div>
-<a href="/glowna.html" class="back-home">⬅ Wróć do strony głównej</a>
+<a href="https://kakubofski.github.io/kakubofski/glowna.html" class="back-home">⬅ Wróć do strony głównej</a>
 
   <script>
     document.addEventListener('DOMContentLoaded', () => {
@@ -234,4 +234,5 @@
   </script>
 </body>
 </html>
+
 
