--- a/odlicznaie do hollow knighta.html
+++ b/odlicznaie do hollow knighta.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Odliczanie do Hollow Knight Silksong</title>
+<title>Odliczanie do Hollow Knight: Silksong</title>
 <style>
   body {
     font-family: Arial, sans-serif;
@@ -59,3 +59,4 @@
 </script>
 </body>
 </html>
+
