--- a/glowna.html
+++ b/glowna.html
@@ -73,11 +73,18 @@
     <p>Strona z licznikiem do premiery lub wydarzenia</p>
   </a>
 
-  <!-- Przykład dodatkowego linku -->
+
+    <a class="card" href="odlicznaie do hollow knighta.html">
+    <h2>⏳ Odliczanie do Hollow Knight: Silksong</h2>
+    <p>Strona z licznikiem do premiery lub wydarzenia</p>
+  </a>
+ <!-- Przykład dodatkowego linku -->
   <a class="card" href="../Strona DyingLightTheBeast/dltbicon.html">
     <h2>🛠 Inny projekt</h2>
     <p>Możesz tu dodać kolejne strony</p>
   </a>
+  
+
 </main>
 
 </body>
